FFMpeg and MP4Box win32 and local compiles fixed.

--- a/Makefile.centos
+++ b/Makefile.centos
@@ -13,5 +13,9 @@ daemons:
 #
 
 update:
-	sudo yum update
-	sudo yum upgrade
+	#sudo yum update
+	#sudo yum upgrade
+	sudo yum install -y \
+		flex \
+		bison \
+		subversion \
