--- a/Makefile.local
+++ b/Makefile.local
@@ -7,6 +7,7 @@
 
 xz_version					= 5.1.2alpha
 tar_version					= 1.26
+sed_version					= 4.2.1
 wget_version				= 1.14
 gmp_version					= 5.0.5
 yasm_version 				= 1.2.0
@@ -17,6 +18,7 @@ zlib_version 				= 1.2.7
 bzip2_version 				= 1.0.6
 nettle_version				= 2.5
 gnutls_version				= 3.0.22
+pkg-config_version			= 0.28
 
 sdl_version					= 1.2.15
 alsa_version 				= 1.0.25
@@ -72,6 +74,7 @@ xbmc_version 				= git
 
 xz = xz-$(xz_version)
 tar = tar-$(tar_version)
+sed = sed-$(sed_version)
 wget = wget-$(wget_version)
 cd-discid = cd-discid-$(cd-discid_version)
 taglib = taglib-$(taglib_version)
@@ -83,6 +86,7 @@ sdl = SDL-$(sdl_version)
 frei0r = frei0r-$(frei0r_version)
 fdk-aac = fdk-aac-$(fdk-aac_version)
 gnutls = gnutls-$(gnutls_version)
+pkg-config = pkg-config-$(pkg-config_version)
 nettle = nettle-$(nettle_version)
 gmp = gmp-$(gmp_version)
 vo-amrwbenc = vo-amrwbenc-$(vo-amrwbenc_version)
@@ -139,7 +143,7 @@ all: ./local ./download
 
 work: bootstrap tools helpers codecs utilities
 
-bootstrap: xz tar gmp nettle gnutls wget
+bootstrap: xz tar sed gmp nettle gnutls wget pkg-config
 
 tools: yasm cmake gperf expat zlib bzip2
 
@@ -211,6 +215,25 @@ tar: $(tar) $(tar)/dezi.done
 
 #####################################################################
 #
+# sed
+#
+
+$(sed): 
+	curl ftp://ftp.gnu.org/gnu/sed/$(sed).tar.gz -o $(sed).tar.gz
+	tar -xvzf $(sed).tar.gz
+	mv $(sed).tar.gz ../download
+
+$(sed)/dezi.done:
+	cd $(sed); \
+	./configure; \
+	make; \
+	sudo make install; \
+	touch dezi.done
+
+sed: $(sed) $(sed)/dezi.done
+
+#####################################################################
+#
 # wget
 #
 
@@ -227,6 +250,25 @@ $(wget)/dezi.done:
 	touch dezi.done
 
 wget: $(wget) $(wget)/dezi.done
+
+#####################################################################
+#
+# pkg-config
+#
+
+$(pkg-config): 
+	wget http://pkgconfig.freedesktop.org/releases/$(pkg-config).tar.gz
+	tar -xvzf $(pkg-config).tar.gz
+	mv $(pkg-config).tar.gz ../download
+
+$(pkg-config)/dezi.done:
+	cd $(pkg-config); \
+	./configure --with-internal-glib; \
+	make; \
+	sudo make install; \
+	touch dezi.done
+
+pkg-config: $(pkg-config) $(pkg-config)/dezi.done
 
 #####################################################################
 #
@@ -1040,7 +1082,7 @@ xavs: $(xavs) $(xavs)/dezi.done
 #
 
 $(utvideo): 
-	wget http://github.com/downloads/rdp/FFmpeg/$(utvideo)-src.zip -O $(utvideo).zip
+	wget --no-check-certificate http://github.com/downloads/rdp/FFmpeg/$(utvideo)-src.zip -O $(utvideo).zip
 	unzip $(utvideo).zip
 	mv -f $(utvideo).zip ../download
 
